excel reading & forecast

--- a/scripts/ABS_data.ipynb
+++ b/scripts/ABS_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "c8d11873",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "025965fa",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "73448dcb",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "0413e347",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "2a1efe9e",
    "metadata": {},
    "outputs": [],
@@ -88,14 +88,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "3f8195a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheets = [1]\n",
+    "sheets = [2]\n",
     "''', 2, 3, 4, 5, 6, 7'''\n",
     "df = pd.read_excel('../raw_data/abs_data/pop_deaths.xlsx', sheet_name = sheets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "3f1e8cab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('../raw_data/abs_data/pop_deaths.xlsx', sheet_name=1, skiprows=4, header=[0,1], nrows=129)[1:]\n",
+    "df = df.drop([(y, 'Standardised death rate.1') for y in range(2012, 2020)], axis=1)\n",
+    "df = df.drop([(y, 'Standardised death rate') for y in range(2012, 2021)], axis=1)\n",
+    "df.columns = [('LGA Code'), ('LGA Name')] + [','.join([str(c) for c in x]) for x in df.columns[2:]]\n",
+    "df2 = df.melt(id_vars=[\"LGA Code\", \"LGA Name\"])\n",
+    "df2['value'] = df2.value.astype('int')\n",
+    "df2[['year','var']] = df2['variable'].str.split(',').tolist()\n",
+    "df2 = df2.sort_values('year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "5cf16083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import seaborn as sns\n",
+    "# sns.scatterplot(df2.query(\"var=='Estimated resident population'\"), x='year', y='value', hue='LGA Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "54ce047c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            NaN\n",
+       "126          NaN\n",
+       "34           NaN\n",
+       "35           NaN\n",
+       "36           NaN\n",
+       "          ...   \n",
+       "2137   -0.007213\n",
+       "2138    0.012455\n",
+       "2139    0.015675\n",
+       "2140    0.017003\n",
+       "2174    0.001449\n",
+       "Name: value, Length: 1152, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.query(\"var=='Estimated resident population'\").groupby(['LGA Code', 'LGA Name'])['value'].apply(pd.Series.pct_change)"
    ]
   }
  ],
@@ -115,7 +175,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
