--- a/notebooks/PTV_visualisations/README
+++ b/notebooks/PTV_visualisations/README
@@ -1,7 +1,7 @@
 temporary solusion for data downloading:
     https://drive.google.com/drive/folders/1_Xs1v6YOtA4MOeDxl3KDubukEr2EQh6y?usp=sharing
 
-    note: the google drive link can be accessed using unimelb account
+    note: the google drive link can be only accessed using unimelb account
 
 
 Reason for separating different types of transporatation
