--- a/scripts/ABS_data.ipynb
+++ b/scripts/ABS_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "c8d11873",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe036cd56d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff29382c640>"
       ]
      },
      "execution_count": 7,
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "e6d2ffb5",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "470ac685",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "018f89da",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "dd9d551a",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "0566cfaa",
    "metadata": {},
    "outputs": [],
@@ -414,11 +414,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "6f5f9f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['S/T code', 'S/T name', 'GCCSA code', 'GCCSA name', 'SA4 code',\n",
+       "       'SA4 name', 'SA3 code', 'SA3 name', 'SA2 code', 'SA2 name', '0-4',\n",
+       "       '5-9', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44',\n",
+       "       '45-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80-84',\n",
+       "       '85 and over', 'Total persons'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_vic.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "725fc87e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S/T code</th>\n",
+       "      <th>S/T name</th>\n",
+       "      <th>GCCSA code</th>\n",
+       "      <th>GCCSA name</th>\n",
+       "      <th>SA4 code</th>\n",
+       "      <th>SA4 name</th>\n",
+       "      <th>SA3 code</th>\n",
+       "      <th>SA3 name</th>\n",
+       "      <th>SA2 code</th>\n",
+       "      <th>SA2 name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>45-49</th>\n",
+       "      <th>50-54</th>\n",
+       "      <th>55-59</th>\n",
+       "      <th>60-64</th>\n",
+       "      <th>65-69</th>\n",
+       "      <th>70-74</th>\n",
+       "      <th>75-79</th>\n",
+       "      <th>80-84</th>\n",
+       "      <th>85 and over</th>\n",
+       "      <th>Total persons</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>648</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>2RVIC</td>\n",
+       "      <td>Rest of Vic.</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>20101</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>201011001</td>\n",
+       "      <td>Alfredton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1142</td>\n",
+       "      <td>974</td>\n",
+       "      <td>848</td>\n",
+       "      <td>709</td>\n",
+       "      <td>666</td>\n",
+       "      <td>596</td>\n",
+       "      <td>419</td>\n",
+       "      <td>253</td>\n",
+       "      <td>164</td>\n",
+       "      <td>16823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>2RVIC</td>\n",
+       "      <td>Rest of Vic.</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>20101</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>201011002</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>...</td>\n",
+       "      <td>818</td>\n",
+       "      <td>833</td>\n",
+       "      <td>812</td>\n",
+       "      <td>822</td>\n",
+       "      <td>721</td>\n",
+       "      <td>736</td>\n",
+       "      <td>526</td>\n",
+       "      <td>387</td>\n",
+       "      <td>380</td>\n",
+       "      <td>12076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>650</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>2RVIC</td>\n",
+       "      <td>Rest of Vic.</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>20101</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>201011005</td>\n",
+       "      <td>Buninyong</td>\n",
+       "      <td>...</td>\n",
+       "      <td>532</td>\n",
+       "      <td>495</td>\n",
+       "      <td>452</td>\n",
+       "      <td>526</td>\n",
+       "      <td>474</td>\n",
+       "      <td>398</td>\n",
+       "      <td>204</td>\n",
+       "      <td>134</td>\n",
+       "      <td>85</td>\n",
+       "      <td>7232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>651</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>2RVIC</td>\n",
+       "      <td>Rest of Vic.</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>20101</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>201011006</td>\n",
+       "      <td>Delacombe</td>\n",
+       "      <td>...</td>\n",
+       "      <td>565</td>\n",
+       "      <td>530</td>\n",
+       "      <td>538</td>\n",
+       "      <td>479</td>\n",
+       "      <td>428</td>\n",
+       "      <td>432</td>\n",
+       "      <td>280</td>\n",
+       "      <td>175</td>\n",
+       "      <td>228</td>\n",
+       "      <td>10640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>2RVIC</td>\n",
+       "      <td>Rest of Vic.</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>20101</td>\n",
+       "      <td>Ballarat</td>\n",
+       "      <td>201011007</td>\n",
+       "      <td>Smythes Creek</td>\n",
+       "      <td>...</td>\n",
+       "      <td>326</td>\n",
+       "      <td>344</td>\n",
+       "      <td>312</td>\n",
+       "      <td>311</td>\n",
+       "      <td>242</td>\n",
+       "      <td>186</td>\n",
+       "      <td>95</td>\n",
+       "      <td>40</td>\n",
+       "      <td>31</td>\n",
+       "      <td>4213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    S/T code  S/T name GCCSA code    GCCSA name SA4 code  SA4 name SA3 code  \\\n",
+       "648        2  Victoria      2RVIC  Rest of Vic.      201  Ballarat    20101   \n",
+       "649        2  Victoria      2RVIC  Rest of Vic.      201  Ballarat    20101   \n",
+       "650        2  Victoria      2RVIC  Rest of Vic.      201  Ballarat    20101   \n",
+       "651        2  Victoria      2RVIC  Rest of Vic.      201  Ballarat    20101   \n",
+       "652        2  Victoria      2RVIC  Rest of Vic.      201  Ballarat    20101   \n",
+       "\n",
+       "     SA3 name   SA2 code       SA2 name  ... 45-49 50-54 55-59 60-64 65-69  \\\n",
+       "648  Ballarat  201011001      Alfredton  ...  1142   974   848   709   666   \n",
+       "649  Ballarat  201011002       Ballarat  ...   818   833   812   822   721   \n",
+       "650  Ballarat  201011005      Buninyong  ...   532   495   452   526   474   \n",
+       "651  Ballarat  201011006      Delacombe  ...   565   530   538   479   428   \n",
+       "652  Ballarat  201011007  Smythes Creek  ...   326   344   312   311   242   \n",
+       "\n",
+       "    70-74 75-79 80-84 85 and over Total persons  \n",
+       "648   596   419   253         164         16823  \n",
+       "649   736   526   387         380         12076  \n",
+       "650   398   204   134          85          7232  \n",
+       "651   432   280   175         228         10640  \n",
+       "652   186    95    40          31          4213  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_vic.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -446,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "ee3ffecd",
    "metadata": {},
    "outputs": [],
@@ -456,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "46c92405",
    "metadata": {},
    "outputs": [
@@ -637,7 +865,7 @@
        "[1122 rows x 6 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "2d574c4e",
    "metadata": {},
    "outputs": [],
@@ -658,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "e56173b4",
    "metadata": {},
    "outputs": [
@@ -826,7 +1054,7 @@
        "[144 rows x 6 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "f66e8bcd",
    "metadata": {},
    "outputs": [
@@ -867,7 +1095,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "d5dc5e5c",
    "metadata": {},
    "outputs": [
@@ -888,7 +1116,7 @@
        "(144, 6)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,6 +1136,14 @@
     "- https://discover.data.vic.gov.au/dataset/school-locations-2021/resource/97c05fd1-8671-4f0a-9f91-e8d57a1c1135\n",
     "- https://discover.data.vic.gov.au/dataset/school-locations-2022"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00ab7e88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
