--- a/scripts/Shapefile Download Script (Notebook for now).ipynb
+++ b/scripts/Shapefile Download Script (Notebook for now).ipynb
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4c59e379",
+   "execution_count": null,
+   "id": "89544729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,14 @@
     "suburbs_sf = suburbs_sf[['SAL_CODE21', 'SAL_NAME21', 'AREASQKM21', 'geometry']]\n",
     "suburbs_sf.dropna(inplace = True)\n",
     "suburbs_sf['geometry'] = suburbs_sf['geometry'].to_crs(\"+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98662ec8",
+   "metadata": {},
+   "source": [
+    "# GEOMETRY .TO_CRS DOESN'T WORK"
    ]
   },
   {
