--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -422,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df.to_csv('../data/curated/lga_suburb_conversion.csv')"
+    "# clean_df.to_csv('../data/curated/lga_suburb_conversion.csv')"
    ]
   },
   {
