--- a/notebooks/crime.ipynb
+++ b/notebooks/crime.ipynb
@@ -627,13 +627,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -916,8 +909,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion:\n",
-    "from the visualisations above, no clear correlationship can be found between the crime rate or total incident and rent price"
+    "# Conclusion:\n",
+    "from the plots above, no clear correlationship can be found between the crime rate or total incident and rent price"
    ]
   }
  ],
@@ -937,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
