update the download dataset feature
update the download dataset feature

--- a/notebooks/crime.ipynb
+++ b/notebooks/crime.ipynb
@@ -19,37 +19,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
-    "import os\n",
-    "\n",
-    "preface = 'https://files.crimestatistics.vic.gov.au/2022-09/'\n",
-    "\n",
-    "tails = ['Data_Tables_LGA_Recorded_Offences_Year_Ending_June_2022.xlsx', 'Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2022.xlsx',\n",
-    "'Data_Tables_LGA_Alleged_Offenders_Year_Ending_June_2022.xlsx', 'Data_Tables_LGA_Victim_Reports_Year_Ending_June_2022.xlsx',\n",
-    "'Data_Tables_LGA_Family_Incidents_Year_Ending_June_2022.xlsx']\n",
-    "\n",
-    "output_relative_dir = '../data/raw/crime/'\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begin download crime data\n",
+      "complete download crime data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make directory\n",
+    "output_relative_dir = '../data/raw/'\n",
     "\n",
     "if not os.path.exists(output_relative_dir):\n",
     "    os.makedirs(output_relative_dir)\n",
-    "\n",
-    "\n",
-    "for tail in tails:\n",
-    "    # output_dir = output_relative_dir + preface + tail\n",
-    "    print(f\"Begin {tail}\")\n",
     "    \n",
-    "    url = preface + tail\n",
-    "    output_dir = f'{output_relative_dir}{tail}'\n",
-    "    print(output_dir)\n",
-    "    \n",
-    "    urlretrieve(url, output_dir)\n",
-    "    print(f\"Completed {tail}\")\n",
     "\n",
-    "print(\"\\nall tasks are completed\")"
+    "target_dir = 'crime'\n",
+    "if not os.path.exists(output_relative_dir + target_dir):\n",
+    "    os.makedirs(output_relative_dir + target_dir)\n",
+    "\n",
+    "# download file\n",
+    "url = 'https://files.crimestatistics.vic.gov.au/2022-09/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2022.xlsx' \n",
+    "\n",
+    "print(f\"Begin download crime data\")\n",
+    "output_dir = f'{output_relative_dir}{target_dir}/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2022.xlsx'\n",
+    "zip_path, _ = urlretrieve(url,output_dir)\n",
+    "print(f\"complete download crime data\")\n"
    ]
   },
   {
@@ -61,15 +71,12 @@
     "    \n",
     "    b. crime data by suburb\n",
     "    c. crime data by lga\n",
-    "\n",
-    "    d. rent data preprocessing\n",
-    "    \n",
-    "    e"
+    "    d. rent data preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -77,13 +84,12 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,14 +121,12 @@
     "for year in df_Crime['Year'].unique():\n",
     "    for name in df_Crime[df_Crime['Year'] == year]['Suburb/Town Name'].unique():\n",
     "        count = df_Crime[(df_Crime['Year'] == year) & (df_Crime['Suburb/Town Name'] == name)] ['Incidents Recorded'].sum()\n",
-    "        df_crime_by_suburb = df_crime_by_suburb.append({'Year': year, 'Suburb/Town Name': name, 'total criminal incidents': count}, ignore_index=True)\n",
-    "\n",
-    "\n"
+    "        df_crime_by_suburb = df_crime_by_suburb.append({'Year': year, 'Suburb/Town Name': name, 'total criminal incidents': count}, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
