--- a/notebooks/PTVdataProcessing.ipynb
+++ b/notebooks/PTVdataProcessing.ipynb
@@ -1,11 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlretrieve\n",
+    "import os\n",
+    "import zipfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Begin download PTV data\n",
+      "complete download PTV data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make directory\n",
+    "output_relative_dir = '../data/raw/'\n",
+    "\n",
+    "if not os.path.exists(output_relative_dir):\n",
+    "    os.makedirs(output_relative_dir)\n",
+    "    \n",
+    "\n",
+    "target_dir = 'PTV DATA'\n",
+    "if not os.path.exists(output_relative_dir + target_dir):\n",
+    "    os.makedirs(output_relative_dir + target_dir)\n",
+    "\n",
+    "# download file\n",
+    "url = 'https://s3-ap-southeast-2.amazonaws.com/cl-isd-prd-datashare-s3-delivery/Order_WVQZRB.zip' \n",
+    "\n",
+    "print(f\"Begin download PTV data\")\n",
+    "output_dir = f'{output_relative_dir}{target_dir}/'\n",
+    "zip_path, _ = urlretrieve(url)\n",
+    "print(f\"complete download PTV data\")\n",
+    "\n",
+    "# unzip\n",
+    "print(f\"Begin unzip PTV data\")\n",
+    "with zipfile.ZipFile(zip_path, \"r\") as f:\n",
+    "    f.extractall(output_dir)\n",
+    "print(f\"complete unzip PTV data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import fiona\n",
@@ -15,26 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptv_layers = fiona.listlayers('../data/raw/PTV DATA/ll_gda94/filegdb/whole_of_dataset/victoria/PUBLIC_TRANSPORT.gdb')\n",
-    "vmadmin_layers = fiona.listlayers('../data/raw/VIC admin/ll_gda2020/filegdb/whole_of_dataset/victoria/VMADMIN.gdb')\n",
-    "\n",
-    "gdf_AD_LOCALITY_AREA = gpd.read_file('../data/raw/VIC admin/ll_gda2020/filegdb/whole_of_dataset/victoria/VMADMIN.gdb', layer='AD_LOCALITY_AREA_POLYGON')\n",
-    "gdf_vic = gdf_AD_LOCALITY_AREA[gdf_AD_LOCALITY_AREA['STATE'] == 'VIC']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_AD_LGA_AREA_POLYGON = gpd.read_file('../data/raw/VIC admin/ll_gda2020/filegdb/whole_of_dataset/victoria/VMADMIN.gdb', layer='AD_LGA_AREA_POLYGON')\n",
-    "\n",
-    "gdf_vic_LGA = gdf_AD_LGA_AREA_POLYGON[gdf_AD_LGA_AREA_POLYGON['STATE'] == 'VIC']"
+    "ptv_layers = fiona.listlayers('../data/raw/PTV DATA/ll_gda94/filegdb/whole_of_dataset/victoria/PUBLIC_TRANSPORT.gdb')"
    ]
   },
   {
@@ -46,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +272,15 @@
     "df_station_count['total_sc'] = df_station_count.iloc[:, 1:].sum(axis=1)\n",
     "\n",
     "df_station_count = df_station_count.rename(columns={'NAME': 'suburb'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_station_count.to_csv('../data/curated/PTV_stations_count_by_suburb.csv')"
    ]
   },
   {
