--- a/notebooks/Internal Features.ipynb
+++ b/notebooks/Internal Features.ipynb
@@ -492,19 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>suburb</th>\n      <th>numSpecialFeatures</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Albion</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bayles</td>\n      <td>9.750000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Aspendale</td>\n      <td>9.111111</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Abbotsford</td>\n      <td>8.416667</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Beaconsfield</td>\n      <td>7.333333</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "         suburb  numSpecialFeatures\n0        Albion           10.000000\n1        Bayles            9.750000\n2     Aspendale            9.111111\n3    Abbotsford            8.416667\n4  Beaconsfield            7.333333"
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "propertyData[[\"suburbName\"]] = propertyData[[\"suburb\"]] \n",
@@ -512,7 +502,9 @@
     "propertyDataBySuburb = propertyData.groupby(\"suburb\")[\"numSpecialFeatures\"].mean()\\\n",
     "    .sort_values(ascending = False).reset_index() \n",
     "\n",
-    "propertyDataBySuburb.head(5) \n"
+    "propertyDataBySuburb.head(5) \n",
+    "\n",
+    "propertyDataBySuburb.to_csv(\"../data/curated/propertyDataSuburbSpecialFeatures.csv\") \n"
    ]
   },
   {
